test/Fail/Issue2763.err
Issue2763.agda:15.1-19: error: [UnequalTerms]
a != w of type A
when checking that the type ⊤ → (w : A) → G w b of the generated
with function is well-formed
(https://agda.readthedocs.io/en/v2.8.0/language/with-abstraction.html#ill-typed-with-abstractions)
